include/constantine_pasta.h

typedef __SIZE_TYPE__    size_t;
typedef __UINT8_TYPE__   uint8_t;
typedef size_t           secret_bool;
typedef uint8_t          byte;